# python-tcp-wait-to-psh

./: notes.txt  pyproject.toml
src/: run.py
src/tcp_wait_to_psh/: send.py
src/tcp_wait_to_psh/lib/: IP_Datagram.py  TCP_Segment.py
