[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcp_wait_to_psh"
version = "0.0.1"
authors = [
  { name="Johnny O'Donnell", email="odonnell_johnny@yahoo.com" },
]
description = "Wait for the last segment to set the PSH flag"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/johnnyodonnell/python-tcp-wait-to-psh"
Issues = "https://github.com/johnnyodonnell/python-tcp-wait-to-psh/issues"

